text alignment bug
visual bug where text didnt alighn centrally on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,8 @@ button {
 }
 
 .card {
+  align-text: center;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
